Bug 113435 - Device-specific options missing in LibreOffice print dialog
Summary: Device-specific options missing in LibreOffice print dialog
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.0.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2017-10-25 09:30 UTC by Michael Weghorn
Modified: 2017-10-25 16:33 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Weghorn 2017-10-25 09:30:36 UTC
In current master (as of commit 48e64ea4a8201a43457e46422a07f14f697eb91e), device-specific print options are no longer available in LibreOffice's print dialog in GNU/Linux with CUPS as a printing system.

Steps to reproduce:

* set up a printer on the system, using a PPD file
* open any document in LibreOffice Writer
* open print dialog, e.g. by pressing Ctrl + P
* select the printer
* click on "Properties"

Result:

* A "Paper" tab is shown where some basic settings (like "Duplex" and "Paper tray") can be selected.
* No printer-specific advanced options from the PPD are available. The "Device" tab that used to be there in the print dialog for that purpose is missing.

Expected result:

* It should be possible to set device-specific options as before, e.g. via an additional "Device" tab (as it was until recently).
Comment 1 Michael Weghorn 2017-10-25 09:35:58 UTC
I bisected the problem to the following commit:

~~~ 9b8828174dca6971d2490844b4c6cab2b9d57b8d is the first bad commit
commit 9b8828174dca6971d2490844b4c6cab2b9d57b8d
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Wed Oct 4 12:07:20 2017 +0100

    turn implicit container explicit in buildable notebooks
    
    as in interim measure for SfxTabDialogs we throw
    away the TabPage if its not suitable for reuse
    
    Change-Id: Ic5776ca3d2a8cb6bf41f33df01b211f81c62a842
    Reviewed-on: https://gerrit.libreoffice.org/43134
    Tested-by: Jenkins <ci@libreoffice.org>
    Reviewed-by: Caolán McNamara <caolanm@redhat.com>
    Tested-by: Caolán McNamara <caolanm@redhat.com>

~~~

Reverting that commmit on top of current "master" makes the "Device" tab with the advanced options reappear.

(In fact, the commit mentioned above at first made LO crash, but that was fixed with commit 2e001b40ad0d19c8db528bb4df739e289163779d.)

@Caolán: Could you possibly have a look at this?
Comment 2 Commit Notification 2017-10-25 15:32:16 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d1e19bd285dfcb60cc088344faa1dd63f095352c

Resolves: tdf#113435 device tab missing from print dialog

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Michael Weghorn 2017-10-25 16:33:48 UTC
Thanks!

I can confirm this works again as expected.