Resolves: tdf#113435 device tab missing from print dialog

Change-Id: I6119d1cbd5484ac2a26d60a7db4ac8fc11165561